--- a/content/scss/totopbtn.scss
+++ b/content/scss/totopbtn.scss
@@ -1,7 +1,7 @@
 .back-to-top {
     position: fixed;
     bottom: 20px;
-    left: 20px;
+    right: 20px;
     cursor: pointer;
     z-index: 9999;
     background-color: $dark-gray;
